--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div  class="title">
-            <h1>Pratica de menu interativo</h1>
+            <h1>Prática de menu interativo</h1>
         </div>
     </main>
     <script src="index.js"></script>
